Fixed some strong styles and added spacing to collaborators list

--- a/webroot/sass/screen.scss
+++ b/webroot/sass/screen.scss
@@ -62,6 +62,7 @@ h1 {
 
 strong {
 	color: $normal-text;
+	font-weight: bold;
 }
 
 em {
@@ -758,6 +759,7 @@ footer {
 		dl {
 			float: left;
 			font-size: 0.75em;
+			padding-right: 32px;
 			width: 464px;
 
 			dt, dd {
@@ -773,7 +775,7 @@ footer {
 			}
 
 			dd {
-				width: 343px;
+				width: 311px;
 				margin-bottom: 32px;
 			}
 
@@ -862,8 +864,8 @@ footer {
 			@include fancy-bottom-border;
 		}
 
-		strong {
-			font-weight: bold;
+		h2 strong {
+			font-weight: normal;
 		}
 
 		> img,
@@ -1168,6 +1170,10 @@ nav.events {
 			+ a {
 				margin-top: 16px;
 			}
+		}
+
+		h2 strong {
+			font-weight: normal;
 		}
 	}
 
